--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     </div>
     <br>
     <br>
-    <div> <center><p style="color: white;"> Måndagar kl. 09.30-11.30</p></div></center>
- <div> <center><p style="color: white;">Torsdagar kl. 09.30-11.30</p></div></center>
-    <div><center><p style="color: white;"> Vecka 35-49 (ej vecka 48)</p></div></center>
+ <div> <center><p style="color: white;">Torsdagar, kl. 09.30–11.30. Sångstund kl. 10.15</p></div></center>
+    <div><center><p style="color: white;"> OBS! Den18/11 kl. 13.00 är det Upplevelsevandring</p></div></center>
         <div><center> <p style="color: white;">Anmälan öppnar kl. 08.00 samma dag och är öppen tills det blir fullt eller tills aktiviteten börjar.</p></div></center>
             <div><center><p style="color: white;"> Det finns plats för 20 föräldrar per gång.</p></div></center>
             <div> <center><p style="color: white;"> Det kan hända att du får ett mejl om du anmält dig och verksamheten redan är full, håll därför utkik i din inkorg.</p></div></center>
